gccida/g2/simplify_if_then_else
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_if_then_else/src/combine.c:5106:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v3; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_if_then_else/src/combine.c:5109:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v6; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_if_then_else/src/combine.c:5110:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v7; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_if_then_else/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_if_then_else/src/combine.c:5111:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v9; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_if_then_else/src/combine.c:5114:4: error: expected ';' after expression
rtx v12; // r10 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_if_then_else/src/combine.c:5114:5: error: use of undeclared identifier 'v12'
rtx v12; // r10 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_if_then_else/src/combine.c:5118:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v16; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_if_then_else/src/combine.c:5120:6: error: use of undeclared identifier 'v18'
rtx *v18; // rdi 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_if_then_else/src/combine.c:5122:4: error: expected ';' after expression
rtx compound_operation; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_if_then_else/src/combine.c:5122:5: error: use of undeclared identifier 'compound_operation'; did you mean 'make_compound_operation'?
rtx compound_operation; // rax 
    ^~~~~~~~~~~~~~~~~~
    make_compound_operation
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_if_then_else/src/combine.c:367:12: note: 'make_compound_operation' declared here
static rtx make_compound_operation  PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_if_then_else/src/combine.c:5123:4: error: expected ';' after expression
rtx v21; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_if_then_else/src/combine.c:5123:5: error: use of undeclared identifier 'v21'; did you mean 'v11'?
rtx v21; // rdx 
    ^~~
    v11
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_if_then_else/src/combine.c:5113:18: note: 'v11' declared here
 struct rtx_def *v11; // rax 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_if_then_else/src/combine.c:5136:4: error: expected ';' after expression
rtx v34; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_if_then_else/src/combine.c:5136:5: error: use of undeclared identifier 'v34'
rtx v34; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_if_then_else/src/combine.c:5142:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v40; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_if_then_else/src/combine.c:5143:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v41; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_if_then_else/src/combine.c:5158:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v56; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_if_then_else/src/combine.c:5163:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v61; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_if_then_else/src/combine.c:5167:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v65; // r11d 
^
enum 
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_if_then_else/src/obj/combine.o] Error 1
